# RGR_Distributed_systems_technologies

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  searchengine.cpp  searchengine.h  test1.txt  test2.txt
